ci: atualiza configuração de pipeline para estágios de build e teste