@@ -5,7 +5,6 @@ import jakarta.persistence.*;
 import java.util.Comparator;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Entity(name = "championship_table")
 public class Table {
@@ -28,7 +27,7 @@ public class Table {
     public List<TableEntry> getTableEntries() {
         return tableEntries.stream()
                 .sorted(Comparator.comparingInt(TableEntry::getPoints).reversed())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void setTableEntries(List<TableEntry> tableEntries) {
